--- a/TnTComponents/Form/TnTInputCheckbox.razor.scss
+++ b/TnTComponents/Form/TnTInputCheckbox.razor.scss
@@ -63,6 +63,17 @@ $background-color: var(--tnt-input-background-color);
         @include typescale.tnt-body-large;
     }
 
+    &:has(input[readonly]) {
+        pointer-events: none;
+        opacity: 0.7;
+    }
+
+    &.tnt-disabled {
+        pointer-events: none;
+        opacity: 0.5 !important;
+        user-select: none;
+    }
+
     input {
         appearance: none;
         grid-area: checkbox;
