--- a/TnTComponents/Buttons/TnTButton.razor.scss
+++ b/TnTComponents/Buttons/TnTButton.razor.scss
@@ -4,6 +4,11 @@
 @use '../Styles/_Variables/_interactable.scss' as interactable;
 @use '../Styles/_Variables/_elevation.scss' as elevation;
 
+$bg-color: var(--tnt-button-bg-color);
+$fg-color: var(--tnt-button-fg-color);
+$tint-color: var(--tnt-button-tint-color);
+$on-tint-color: var(--tnt-button-on-tint-color);
+
 .tnt-button {
     &.tnt-size-xs, &.tnt-size-s {
         background-color: transparent;
@@ -11,14 +16,25 @@
         cursor: pointer;
 
         .tnt-small-button-layer {
-            @include interactable.tnt-interactable;
+            &.tnt-button-tint-color.tnt-button-on-tint-color {
+                @include interactable.tnt-interactable($tint-color, $on-tint-color);
+            }
+
+            &.tnt-button-tint-color:not(.tnt-button-on-tint-color) {
+                @include interactable.tnt-interactable($tint-color, null);
+            }
+
+            &.tnt-button-on-tint-color:not(.tnt-button-tint-color) {
+                @include interactable.tnt-interactable(null, $on-tint-color);
+            }
+
+            color: $fg-color;
 
             &.tnt-filled {
-                @include colors.tnt-default-background-colors;
+                background-color: $bg-color;
             }
 
             @include typescale.tnt-typescale(500, 14px, 20px, 0.1px);
-            @include colors.tnt-default-foreground-colors;
             @include textAlignments.tnt-text-alignments;
             @include interactable.tnt-disabled;
             display: flex;
@@ -37,13 +53,24 @@
     }
 
     &.tnt-size-m, &.tnt-size-l, &.tnt-size-xl {
-        @include interactable.tnt-interactable;
-
-        &.tnt-filled {
-            @include colors.tnt-default-background-colors;
+        &.tnt-button-tint-color.tnt-button-on-tint-color {
+            @include interactable.tnt-interactable($tint-color, $on-tint-color);
         }
 
-        @include colors.tnt-default-foreground-colors;
+        &.tnt-button-tint-color:not(.tnt-button-on-tint-color) {
+            @include interactable.tnt-interactable($tint-color, null);
+        }
+
+        &.tnt-button-on-tint-color:not(.tnt-button-tint-color) {
+            @include interactable.tnt-interactable(null, $on-tint-color);
+        }
+
+        color: $fg-color;
+
+        &.tnt-filled {
+            background-color: $bg-color;
+        }
+
         @include textAlignments.tnt-text-alignments;
         @include interactable.tnt-disabled;
         transition: 250ms ease-in-out;
