Enhance button interactivity and state management
- Added `Disabled` property to `TnTButton` and `TnTFabButton`.
- Updated `ElementClass` to manage disabled state and interactivity.
- Modified SCSS for `TnTButton` to handle button states without tint classes.
- Enhanced `ElementStyle` in `TnTFabButton` to include color variables.
- Improved SCSS for `TnTFabButton` to define new color variables and rules.

--- a/TnTComponents/Buttons/TnTButton.razor.scss
+++ b/TnTComponents/Buttons/TnTButton.razor.scss
@@ -28,6 +28,10 @@ $on-tint-color: var(--tnt-button-on-tint-color);
                 @include interactable.tnt-interactable(null, $on-tint-color);
             }
 
+            &:not(.tnt-button-on-tint-color):not(.tnt-button-tint-color) {
+                @include interactable.tnt-interactable(null, null);
+            }
+
             color: $fg-color;
 
             &.tnt-filled {
@@ -63,6 +67,10 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
         &.tnt-button-on-tint-color:not(.tnt-button-tint-color) {
             @include interactable.tnt-interactable(null, $on-tint-color);
+        }
+
+        &:not(.tnt-button-on-tint-color):not(.tnt-button-tint-color) {
+            @include interactable.tnt-interactable(null, null);
         }
 
         color: $fg-color;
