--- a/TnTComponents/Anchor/TnTNavLink.razor.scss
+++ b/TnTComponents/Anchor/TnTNavLink.razor.scss
@@ -4,6 +4,11 @@
 @use '../Styles/_Variables/_interactable.scss' as interactable;
 @use '../Styles/_Variables/_elevation.scss' as elevation;
 
+$bg-color: var(--tnt-anchor-bg-color);
+$fg-color: var(--tnt-anchor-fg-color);
+$tint-color: var(--tnt-anchor-tint-color);
+$on-tint-color: var(--tnt-anchor-on-tint-color);
+
 .tnt-nav-link {
     &:not(.tnt-filled.tnt-outlined) {
         cursor: pointer;
@@ -33,14 +38,29 @@
             cursor: pointer;
 
             .tnt-small-anchor-layer {
-                @include interactable.tnt-interactable;
+                &.tnt-anchor-tint-color.tnt-anchor-on-tint-color {
+                    @include interactable.tnt-interactable($tint-color, $on-tint-color);
+                }
+
+                &.tnt-anchor-tint-color:not(.tnt-anchor-on-tint-color) {
+                    @include interactable.tnt-interactable($tint-color, null);
+                }
+
+                &.tnt-anchor-on-tint-color:not(.tnt-anchor-tint-color) {
+                    @include interactable.tnt-interactable(null, $on-tint-color);
+                }
+
+                &:not(.tnt-anchor-on-tint-color):not(.tnt-anchor-tint-color) {
+                    @include interactable.tnt-interactable(null, null);
+                }
+
+                color: $fg-color;
 
                 &.tnt-filled {
-                    @include colors.tnt-default-background-colors;
+                    background-color: $bg-color;
                 }
 
                 @include typescale.tnt-typescale(500, 14px, 20px, 0.1px);
-                @include colors.tnt-default-foreground-colors;
                 @include textAlignments.tnt-text-alignments;
                 @include interactable.tnt-disabled;
                 display: flex;
@@ -59,16 +79,16 @@
                 &.active {
                     &.tnt-filled {
                         &.active-bg-color {
-                            background-color: var(--active-bg-color) !important;
+                            background-color: var(--tnt-anchor-active-bg-color) !important;
                         }
                     }
 
                     &.active-fg-color {
-                        color: var(--active-fg-color) !important;
+                        color: var(--tnt-anchor-active-fg-color) !important;
 
                         &.tnt-outlined {
-                            border-color: var(--active-fg-color) !important;
-                            outline-color: var(--active-fg-color) !important;
+                            border-color: var(--tnt-anchor-active-fg-color) !important;
+                            outline-color: var(--tnt-anchor-active-fg-color) !important;
                         }
                     }
                 }
@@ -76,13 +96,28 @@
         }
 
         &.tnt-size-m, &.tnt-size-l, &.tnt-size-xl {
-            @include interactable.tnt-interactable;
-
-            &.tnt-filled {
-                @include colors.tnt-default-background-colors;
+            &.tnt-anchor-tint-color.tnt-anchor-on-tint-color {
+                @include interactable.tnt-interactable($tint-color, $on-tint-color);
             }
 
-            @include colors.tnt-default-foreground-colors;
+            &.tnt-anchor-tint-color:not(.tnt-anchor-on-tint-color) {
+                @include interactable.tnt-interactable($tint-color, null);
+            }
+
+            &.tnt-anchor-on-tint-color:not(.tnt-anchor-tint-color) {
+                @include interactable.tnt-interactable(null, $on-tint-color);
+            }
+
+            &:not(.tnt-anchor-on-tint-color):not(.tnt-anchor-tint-color) {
+                @include interactable.tnt-interactable(null, null);
+            }
+
+            color: $fg-color;
+
+            &.tnt-filled {
+                background-color: $bg-color;
+            }
+
             @include textAlignments.tnt-text-alignments;
             @include interactable.tnt-disabled;
             transition: 250ms ease-in-out;
@@ -91,16 +126,16 @@
             &.active {
                 &.tnt-filled {
                     &.active-bg-color {
-                        background-color: var(--active-bg-color) !important;
+                        background-color: var(--tnt-anchor-active-bg-color) !important;
                     }
                 }
 
                 &.active-fg-color {
-                    color: var(--active-fg-color) !important;
+                    color: var(--tnt-anchor-active-fg-color) !important;
 
                     &.tnt-outlined {
-                        border-color: var(--active-fg-color) !important;
-                        outline-color: var(--active-fg-color) !important;
+                        border-color: var(--tnt-anchor-active-fg-color) !important;
+                        outline-color: var(--tnt-anchor-active-fg-color) !important;
                     }
                 }
             }
