--- a/TnTComponents/Layout/TnTSideNavToggle.razor.scss
+++ b/TnTComponents/Layout/TnTSideNavToggle.razor.scss
@@ -1,5 +1,9 @@
 ﻿@use '../Styles/_Variables/_interactable.scss' as interactable;
 
+$tint-color: var(--tnt-side-nav-toggle-tint-color);
+$on-tint-color: var(--tnt-side-nav-toggle-on-tint-color);
+$icon-color: var(--tnt-side-nav-toggle-icon-color);
+
 .tnt-side-nav-toggle {
     padding: 4px;
     margin: 8px;
@@ -12,6 +16,21 @@
     height: 48px;
     width: 48px;
     box-sizing: border-box;
+    color: $icon-color;
 
-    @include interactable.tnt-interactable;
+    &.tnt-side-nav-toggle-tint-color.tnt-side-nav-toggle-on-tint-color {
+        @include interactable.tnt-interactable($tint-color, $on-tint-color);
+    }
+
+    &.tnt-side-nav-toggle-tint-color:not(.tnt-side-nav-toggle-on-tint-color) {
+        @include interactable.tnt-interactable($tint-color, null);
+    }
+
+    &.tnt-side-nav-toggle-on-tint-color:not(.tnt-side-nav-toggle-tint-color) {
+        @include interactable.tnt-interactable(null, $on-tint-color);
+    }
+
+    &:not(.tnt-side-nav-toggle-on-tint-color):not(.tnt-side-nav-toggle-tint-color) {
+        @include interactable.tnt-interactable(null, null);
+    }
 }
