--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -174,7 +174,7 @@
             Input File
         </h3>
         <TnTColumn S="12">
-            <TnTInputFile multiple />
+            <TnTInputFile multiple Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
         </TnTColumn>
     </TnTRow>
     <TnTRow>
