Add file upload enhancements with progress tracking
- Updated `Form.razor` to include three `TnTInputFile` components with different modes and a max file count of 5.
- Introduced new `InputFileMode` enum in `InputFileMode.cs` for file handling modes.
- Added progress display feature in `TnTInputFile.razor` for file uploads.
- Significant updates in `TnTInputFile.razor.cs`, including new classes for file buffers and event args.
- Enhanced `TnTInputFile.razor.js` with functions for drag-and-drop file handling.
- Modified `TnTInputFile.razor.scss` to style the new progress indicator and support drag-and-drop layout.

--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -173,8 +173,15 @@
         <h3>
             Input File
         </h3>
-        <TnTColumn S="12">
-            <TnTInputFile multiple Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
+        <TnTColumn S="4">
+            <TnTInputFile multiple Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" Mode="@InputFileMode.Buffer" MaximumFileCount="5" />
+        </TnTColumn>
+        <TnTColumn S="4">
+            <TnTInputFile multiple Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" Mode="@InputFileMode.SaveToTemporaryFolder" MaximumFileCount="5" />
+        </TnTColumn>
+
+        <TnTColumn S="4">
+            <TnTInputFile multiple Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" Mode="@InputFileMode.Stream" MaximumFileCount="5" />
         </TnTColumn>
     </TnTRow>
     <TnTRow>
